Tool name in tool options

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -153,6 +153,14 @@
   "Autosave": null,
   "Error_Autosave_FileSaving": null,
   "Error_Autosave_SettingsSaving": null,
+  "Tool_Options": "Werktuig Opties",
+  "Tool_PencilTool": "Potlood",
+  "Tool_EraserTool": "Gom",
+  "Tool_SelectTool": "Selecteer",
+  "Tool_MoveTool": "Verplaats",
+  "Tool_LineTool": "Lijn",
+  "Tool_BucketTool": "Emmer",
+  "Tool_TextTool": "Tekst",
   "Tool_PencilToolTip": "Potlood (Shift + Ctrl + D)",
   "Tool_EraserToolTip": "Gom (Shift + Ctrl + E)",
   "Tool_SelectToolTip": "Selecteren (Shift + Ctrl + W)",
