--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -153,6 +153,14 @@
   "Autosave": "Autosave",
   "Error_Autosave_FileSaving": "Autosave for {0} failed! Exception message: {1}",
   "Error_Autosave_SettingsSaving": "Settings update while autosaving failed! Exception message: {0}",
+  "Tool_Options": "Tool Options",
+  "Tool_PencilTool": "Pencil",
+  "Tool_EraserTool": "Eraser",
+  "Tool_SelectTool": "Select",
+  "Tool_MoveTool": "Move",
+  "Tool_LineTool": "Line",
+  "Tool_BucketTool": "Bucket",
+  "Tool_TextTool": "Text",
   "Tool_PencilToolTip": "Pencil Tool (Shift + Ctrl + D)",
   "Tool_EraserToolTip": "Eraser Tool (Shift + Ctrl + E)",
   "Tool_SelectToolTip": "Select Tool (Shift + Ctrl + W)",
