Rectangle Tool + Ellipse Tool WIP

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -51,8 +51,6 @@
   "LayerManagement_Tooltip_RemoveLayer": "Verwijder laag",
   "FiltersMenu": "Filters",
   "NoFilters": "Geen filters!",
-  "DrawMenu": "Tekenen",
-  "FillSelection": "Vul selectie",
   "Create": "Creëer",
   "Edit": "Bewerk",
   "ASCIIArt": "ASCII Kunst",
@@ -111,6 +109,7 @@
   "Tool_Size": "Grootte",
   "Tool_StayInsideSelection": "Blijf binnen selectie",
   "Tool_EightDirectional": "Acht directioneel",
+  "Tool_Fill": "Vul in",
   "File_ExportFailedMessage": "Kunst bestand exporteren mislukt! Uitzonderingsbericht: {0}",
   "File_ExportBusy": "Aan het exporteren naar {0}...",
   "File_ExportSuccessMessage": "Kunst bestand geëxporteerd naar {0}! Open bestand?",
@@ -131,6 +130,7 @@
   "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak.\\nHet afsluiten van de programma is stop gezet.\\nUitzondetingsbericht: {0}",
   "Application_AlreadyRunningMessage": null,
   "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
+  "Application_Exit_SettingsSaveErrorMessage": null,
   "About": "Over",
   "Credits": "Credits",
   "Credits_Translation": "Kiara, het Polyglot project, Google Translate",
@@ -151,6 +151,7 @@
   "PresetPalette_Braille6": "6-punts braille",
   "PresetPalette_Braille8": "8-punts braille",
   "Autosave": null,
+  "Autosave_Busy": null,
   "Error_Autosave_FileSaving": null,
   "Error_Autosave_SettingsSaving": null,
   "Tool_Options": "Werktuig Opties",
@@ -161,6 +162,8 @@
   "Tool_LineTool": "Lijn",
   "Tool_BucketTool": "Emmer",
   "Tool_TextTool": "Tekst",
+  "Tool_RectangleTool": "Rechthoek",
+  "Tool_EllipseTool": "Ovaal",
   "Tool_PencilToolTip": "Potlood (Shift + Ctrl + D)",
   "Tool_EraserToolTip": "Gom (Shift + Ctrl + E)",
   "Tool_SelectToolTip": "Selecteren (Shift + Ctrl + W)",
@@ -168,5 +171,7 @@
   "Tool_LineToolTip": "Lijnen (Shift + Ctrl + L)",
   "Tool_BucketToolTip": "Emmer (Shift + Ctrl + B)",
   "Tool_TextToolTip": "Tekst (Shift + Ctrl + T)",
+  "Tool_RectangleToolTip": "Rechthoek (Shift + Ctrl + R)",
+  "Tool_EllipseToolTip": "Ovaal (Shift + Ctrl + G)",
   "SupportedFiles": "Ondersteunde bestandstypen"
 }
