--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -51,8 +51,6 @@
   "LayerManagement_Tooltip_RemoveLayer": "Remove layer",
   "FiltersMenu": "Filters",
   "NoFilters": "No filters!",
-  "DrawMenu": "Draw",
-  "FillSelection": "Fill selection",
   "Create": "Create",
   "Edit": "Edit",
   "ASCIIArt": "ASCII Art",
@@ -111,6 +109,7 @@
   "Tool_Size": "Size",
   "Tool_StayInsideSelection": "Stay inside selection",
   "Tool_EightDirectional": "Eight directional",
+  "Tool_Fill": "Fill in",
   "File_ExportFailedMessage": "Failed to export art file! Exception message: {0}",
   "File_ExportBusy": "Exporting to {0}...",
   "File_ExportSuccessMessage": "Exported art file to {0}! Open file?",
@@ -131,6 +130,7 @@
   "Application_CloseBackgroundTaskErrorMessage": "An error occurred while completing background task, exit of application cancelled.\\nException message: {0}",
   "Application_AlreadyRunningMessage": "There is already an instance of {0} running!",
   "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action.",
+  "Application_Exit_SettingsSaveErrorMessage": "Settings failed to save while exiting application! Exception message: {0}\\nOpen log file?",
   "About": "About",
   "Credits": "Credits",
   "Credits_Translation": "Kiara, the Polyglot Project, Google Translate",
@@ -151,7 +151,8 @@
   "PresetPalette_Braille6": "6-dot braille",
   "PresetPalette_Braille8": "8-dot braille",
   "Autosave": "Autosave",
-  "Error_Autosave_FileSaving": "Autosave for {0} failed! Exception message: {1}",
+  "Autosave_Busy": "Autosaving all open files...",
+  "Error_Autosave_FileSaving": "Autosave failed! Exception message: {1}",
   "Error_Autosave_SettingsSaving": "Settings update while autosaving failed! Exception message: {0}",
   "Tool_Options": "Tool Options",
   "Tool_PencilTool": "Pencil",
@@ -161,6 +162,8 @@
   "Tool_LineTool": "Line",
   "Tool_BucketTool": "Bucket",
   "Tool_TextTool": "Text",
+  "Tool_RectangleTool": "Rectangle",
+  "Tool_EllipseTool": "Ellipse",
   "Tool_PencilToolTip": "Pencil Tool (Shift + Ctrl + D)",
   "Tool_EraserToolTip": "Eraser Tool (Shift + Ctrl + E)",
   "Tool_SelectToolTip": "Select Tool (Shift + Ctrl + W)",
@@ -168,5 +171,7 @@
   "Tool_LineToolTip": "Line Tool (Shift + Ctrl + L)",
   "Tool_BucketToolTip": "Bucket Tool (Shift + Ctrl + B)",
   "Tool_TextToolTip": "Text Tool (Shift + Ctrl + T)",
+  "Tool_RectangleToolTip": "Rectangle Tool (Shift + Ctrl + R)",
+  "Tool_EllipseToolTip": "Ellipse Tool (Shift + Ctrl + G)",
   "SupportedFiles": "Supported file types"
 }
