--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -27,7 +27,7 @@
   "CropCanvas": "Crop canvas",
   "CropLayer": "Crop layer",
   "FitLayersInCanvas": "Crop all layers to fit within canvas",
-  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\\nAre you sure?",
+  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\nAre you sure?",
   "ViewMenu": "View",
   "DarkMode": "Dark mode",
   "Visible": "Visible",
@@ -51,6 +51,22 @@
   "LayerManagement_Tooltip_RemoveLayer": "Remove layer",
   "FiltersMenu": "Filters",
   "NoFilters": "No filters!",
+  "Filters_Main_Affect": "Affect",
+  "Filters_Main_Affect_Tooltip": "The region that this filter will affect.",
+  "Filters_Main_Affect_Selection": "Selection",
+  "Filters_Main_Affect_Layer": "Layer",
+  "Filters_Main_Affect_Canvas": "Canvas",
+  "Filters_Main_SelectionOutsideMessage": "Selection is outside of selected layer.",
+  "Filters_Main_UnavailableMessage": "Filter is unavailable.",
+  "Filters_Mirror": "Mirror",
+  "Filters_Mirror_Description": "Mirrors/flips the specified region around the specified axis.",
+  "Filters_Mirror_Axis": "Axis",
+  "Filters_Mirror_Axis_Tooltip": "The axis to mirror around.",
+  "Filters_Outline": "Outline",
+  "Filters_Outline_Description": "Creates an outline around the specified region.",
+  "Filters_Outline_Character": "Character",
+  "Filters_Outline_Character_Tooltip": "Character to use as the outline.",
+  "Filter_Apply": "Apply filter",
   "Create": "Create",
   "Edit": "Edit",
   "ASCIIArt": "ASCII Art",
@@ -70,7 +86,7 @@
   "InvertBrightness": "Invert brightness",
   "Scale": "Scale",
   "ImageArtLayerConverter_Characters": "Characters",
-  "ImageArtLayerConverter_Characters_Info": "<= DENSER  =========  SPARSER =>\\n(Space is an empty character)",
+  "ImageArtLayerConverter_Characters_Info": "<= DENSER  =========  SPARSER =>\n(Space is an empty character)",
   "Error_ImageArtLayerConverter_Characters_Invalid": "Import palette must use atleast 1 character!",
   "Settings_Language": "Language",
   "Settings_UserInterface": "User interface",
@@ -94,7 +110,7 @@
   "Palette_CreateFailedMessage": "Failed to create palette! Exception message: {0}",
   "Palette_EditBusy": "Editing palette {0}...",
   "Palette_EditFailedMessage": "Failed to edit palette {0}! Exception message: {1}",
-  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\\nThis can not be undone.",
+  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\nThis can not be undone.",
   "Palette_RemoveBusy": "Removing palette {0}...",
   "Palette_RemoveFailedMessage": "Failed to remove palette {0}! Exception message: {1}",
   "Error_Palette_AlreadyExistsMessage": "Palette {0} already exists!",
@@ -111,27 +127,27 @@
   "Tool_StayInsideSelection": "Stay inside selection",
   "Tool_EightDirectional": "Eight directional",
   "Tool_Fill": "Fill in",
-  "File_ExportFailedMessage": "Failed to export art file! Exception message: {0}",
+  "File_ExportFailedMessage": "Failed to export art file!\nException message: {0}",
   "File_ExportBusy": "Exporting to {0}...",
-  "File_ExportSuccessMessage": "Exported art file to {0}! Open file?",
-  "File_SaveFailedMessage": "Failed to save art file! Exception message: {0}",
+  "File_ExportSuccessMessage": "Exported art file to {0}!\nOpen file?",
+  "File_SaveFailedMessage": "Failed to save art file!\nException message: {0}",
   "File_SaveBusy": "Saving {0}...",
   "File_SaveSuccessMessage": "Saved art file to {0}!",
   "File_OpenBusy": "Opening {0}...",
-  "File_OpenFailedMessage": "Failed to open art file! Exception message: {0}",
+  "File_OpenFailedMessage": "Failed to open art file!\nException message: {0}",
   "File_ImportBusy": "Importing {0}...",
-  "File_ImportFailedMessage": "Failed to import art file! Exception message: {0}",
+  "File_ImportFailedMessage": "Failed to import art file!\nException message: {0}",
   "File_Close": "Close File",
-  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\\nThis file might take a long time to load and save, and can be performance heavy.\\nAre you sure you want to continue?",
+  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\nThis file might take a long time to load and save, and can be performance heavy.\nAre you sure you want to continue?",
   "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
-  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nWould you like to save?",
+  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nWould you like to save?",
   "Error_Application_StartUpErrorMessage": "It seems {0} has run into an unhandled exception, and must close! If this keeps occuring, please inform the creator of {0}!\\nOpen log file?",
-  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nAre you sure want to exit? (All changes will be discarded)",
+  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nAre you sure want to exit? (All changes will be discarded)",
   "Application_AutoCloseMessage": "Application will automatically close when the current background task has finished after this message.",
-  "Application_CloseBackgroundTaskErrorMessage": "An error occurred while completing background task, exit of application cancelled.\\nException message: {0}",
+  "Application_CloseBackgroundTaskErrorMessage": "An error occurred while completing background task, exit of application cancelled.\nException message: {0}",
   "Application_AlreadyRunningMessage": "There is already an instance of {0} running!",
   "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action.",
-  "Application_Exit_SettingsSaveErrorMessage": "Settings failed to save while exiting application! Exception message: {0}\\nOpen log file?",
+  "Application_Exit_SettingsSaveErrorMessage": "Settings failed to save while exiting application!\nException message: {0}\nOpen log file?",
   "About": "About",
   "Credits": "Credits",
   "Credits_Translation": "Kiara, the Polyglot Project, Google Translate",
@@ -153,8 +169,8 @@
   "PresetPalette_Braille8": "8-dot braille",
   "Autosave": "Autosave",
   "Autosave_Busy": "Autosaving all open files...",
-  "Error_Autosave_FileSaving": "Autosave failed! Exception message: {0}",
-  "Error_Autosave_SettingsSaving": "Settings update while autosaving failed! Exception message: {0}",
+  "Error_Autosave_FileSaving": "Autosave failed!\nException message: {0}",
+  "Error_Autosave_SettingsSaving": "Settings update while autosaving failed!\nException message: {0}",
   "Tool_Options": "Tool Options",
   "Tool_PencilTool": "Pencil",
   "Tool_EraserTool": "Eraser",
