Edited language files

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -1,6 +1,5 @@
 {
   "ProgramName": "Kiara's ASCII Kunst Programma",
-  "LanguageName": "Nederlands",
   "FileMenu": "Bestand",
   "NewFile": "Nieuw",
   "OpenFile": "Open",
@@ -27,7 +26,7 @@
   "CropCanvas": "Snij canvas bij",
   "CropLayer": "Snij laag bij",
   "FitLayersInCanvas": "Snij alle lagen bij zodat ze in canvas passen",
-  "FitLayersInCanvas_WarningMessage": "Deze actie kan lagen verwijderen.\\nBen je zeker?",
+  "FitLayersInCanvas_WarningMessage": "Deze actie kan lagen verwijderen.\nBen je zeker?",
   "ViewMenu": "Bekijken",
   "DarkMode": "Donker modus",
   "Visible": "Zichtbaar",
@@ -50,7 +49,24 @@
   "LayerManagement_Tooltip_MergeLayerDown": "Laag naar beneden samenvoegen",
   "LayerManagement_Tooltip_RemoveLayer": "Verwijder laag",
   "FiltersMenu": "Filters",
-  "NoFilters": "Geen filters!",
+  "Filters_Main_Affect": "Regio",
+  "Filters_Main_Affect_Tooltip": "De regio dat deze filter zal beïnvloeden.",
+  "Filters_Main_Affect_Selection": "Selectie",
+  "Filters_Main_Affect_Layer": "Laag",
+  "Filters_Main_Affect_Canvas": "Canvas",
+  "Filters_Main_SelectionOutsideMessage": "Selectie is buiten de geselecteerde laag.",
+  "Filters_Main_UnavailableMessage": "Filter is niet beschikbaar.",
+  "Filters_Mirror": "Spiegelen",
+  "Filters_Mirror_Description": "Spiegelt de gekozen regio rond de gekozen as.",
+  "Filters_Main_Axis": "As",
+  "Filters_Mirror_Axis_Tooltip": "De as om rond te spiegelen.",
+  "Filters_Outline": "Omlijning",
+  "Filters_Outline_Description": "Creërt een omlijning rond de gekozen regio.",
+  "Filters_Outline_Character": "Teken",
+  "Filters_Outline_Character_Tooltip": "Teken om te gebruiken als omlijning.",
+  "Filters_Wave": null,
+  "Filters_Main_Strength": "Sterkte",
+  "Filter_Apply": "Pas filter toe.",
   "Create": "Creëer",
   "Edit": "Bewerk",
   "ASCIIArt": "ASCII Kunst",
@@ -70,12 +86,12 @@
   "InvertBrightness": "Helderheid omkeren",
   "Scale": "Schaal",
   "ImageArtLayerConverter_Characters": "Gebruikte tekens",
-  "ImageArtLayerConverter_Characters_Info": "<= DICHTER  ========  SCHAARSER =>\\n(Space is een lege teken)",
+  "ImageArtLayerConverter_Characters_Info": "<= DICHTER  ========  SCHAARSER =>\n(Space is een lege teken)",
   "Error_ImageArtLayerConverter_Characters_Invalid": "Importeer palet moet minstens één teken gebruiken!",
   "Settings_Language": "Taal",
   "Settings_UserInterface": "Gebruikersomgeving",
   "Settings_CanvasFont": "Canvas-lettertype",
-  "Settings_ToolPreviews": null,
+  "Settings_ToolPreviews": "Toon werktuig voorvertoningen",
   "Settings_Files": "Bestanden",
   "Settings_AutosaveFiles": "Bestanden automatisch bewaren",
   "Settings_AutosaveInterval": "Bewaar om de {0} minuten",
@@ -94,7 +110,7 @@
   "Palette_CreateFailedMessage": "Palet {0} creëren mislukt! Uitzonderingsbericht: {1}",
   "Palette_EditBusy": "Palet {0} aan het bewerken...",
   "Palette_EditFailedMessage": "Palet {0} bewerken mislukt! Uitzonderingsbericht: {1}",
-  "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\\nDit kan niet ongedaan worden.",
+  "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\nDit kan niet ongedaan worden.",
   "Palette_RemoveBusy": "Palet {0} aan het verwijderen...",
   "Palette_RemoveFailedMessage": "Palet {0} verwijderen mislukt! Uitzonderingsbericht: {1}",
   "Error_Palette_AlreadyExistsMessage": "Palet {0} bestaat al!",
@@ -111,27 +127,30 @@
   "Tool_StayInsideSelection": "Blijf binnen selectie",
   "Tool_EightDirectional": "Acht directioneel",
   "Tool_Fill": "Vul in",
-  "File_ExportFailedMessage": "Kunst bestand exporteren mislukt! Uitzonderingsbericht: {0}",
+  "File_Drop_NoExtensionMessage": "Kan een bestand zonder extensie niet openen!\r\nBestandspad: {0}",
+  "File_Drop_UnknownExtensionMessage": "Kan een bestand met extensie {0} niet openen!\r\nBestandspad: {1}",
+  "File_DifferentVersionMessage": "Het ASCII-kunstbestand is mogelijk niet volledig compatibel met deze build. De bestandsversie is niet gelijk aan de bestandsversie waarvoor deze build is gemaakt.\r\nASCII-kunstbestandsversie: {0}\r\nHuidige versie van het buildbestand: {1}",
+  "File_ExportFailedMessage": "Kunst bestand exporteren mislukt!\nUitzonderingsbericht: {0}",
   "File_ExportBusy": "Aan het exporteren naar {0}...",
-  "File_ExportSuccessMessage": "Kunst bestand geëxporteerd naar {0}! Open bestand?",
-  "File_SaveFailedMessage": "Kunst bestand bewaren mislukt! Uitzonderingsbericht: {0}",
+  "File_ExportSuccessMessage": "Kunst bestand geëxporteerd naar {0}!\nOpen bestand?",
+  "File_SaveFailedMessage": "Kunst bestand bewaren mislukt! \nUitzonderingsbericht: {0}",
   "File_SaveBusy": "Aan het bewaren op {0}...",
   "File_SaveSuccessMessage": "Kunst bestand bewaard op {0}!",
   "File_OpenBusy": "{0} aan het openen…",
-  "File_OpenFailedMessage": "Kunst bestand openen mislukt! Uitzonderingsbericht: {0}",
+  "File_OpenFailedMessage": "Kunst bestand openen mislukt!\nUitzonderingsbericht: {0}",
   "File_ImportBusy": "{0} aan het importeren…",
-  "File_ImportFailedMessage": "Kunst bestand importeren mislukt! Uitzonderingsbericht: {0}",
+  "File_ImportFailedMessage": "Kunst bestand importeren mislukt!\nUitzonderingsbericht: {0}",
   "File_Close": "Sluit bestand af",
-  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\\n Ben je zeker dat je wilt verdergaan?",
+  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\nBen je zeker dat je wilt verdergaan?",
   "File_TooLargeMessage": "Canvas oppervlakte is te groot! Max: {0} tekens ({1} tekens)",
-  "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\\nWilt je eerst bewaren?",
-  "Error_Application_StartUpErrorMessage": null,
-  "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
+  "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\nWilt je eerst bewaren?",
+  "Error_Application_StartUpErrorMessage": "Het lijkt erop dat {0} een onverwerkte uitzondering heeft tegengekomen, waardoor het programma moet sluiten! Als dit zich blijft voordoen, informeer dan de maker van {0}!\\nToon log bestand?",
+  "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
   "Application_AutoCloseMessage": "Programma zal automatisch afsluiten na dat de huidige achtergrond taak voltooid is.",
-  "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak.\\nHet afsluiten van de programma is stop gezet.\\nUitzondetingsbericht: {0}",
-  "Application_AlreadyRunningMessage": null,
+  "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak.\nHet afsluiten van de programma is stop gezet.\nUitzondetingsbericht: {0}",
+  "Application_AlreadyRunningMessage": "Er is al een instantie van {0} actief!",
   "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
-  "Application_Exit_SettingsSaveErrorMessage": null,
+  "Application_Exit_SettingsSaveErrorMessage": "Opslaan van instellingen mislukte tijdens het afsluiten van de programma.\nUitzonderingsbreicht: {0}\nToon log bestand?",
   "About": "Over",
   "Credits": "Credits",
   "Credits_Translation": "Kiara, het Polyglot project, Google Translate",
@@ -151,10 +170,10 @@
   "PresetPalette_Shapes": "Vormen",
   "PresetPalette_Braille6": "6-punts braille",
   "PresetPalette_Braille8": "8-punts braille",
-  "Autosave": null,
-  "Autosave_Busy": null,
-  "Error_Autosave_FileSaving": null,
-  "Error_Autosave_SettingsSaving": null,
+  "Autosave": "Automatisch bewaren",
+  "Autosave_Busy": "Alle open bestanden aan het bewaren...",
+  "Error_Autosave_FileSaving": "Automatisch bewaren is gemislukt!\nUitzonderingsbericht: {0}",
+  "Error_Autosave_SettingsSaving": "Opslag van instellingen mislukte tijdens het automatisch bewaren van bestanden!\nUitzonderingsbericht: {0}",
   "Tool_Options": "Werktuig Opties",
   "Tool_PencilTool": "Potlood",
   "Tool_EraserTool": "Gom",
@@ -165,14 +184,5 @@
   "Tool_TextTool": "Tekst",
   "Tool_RectangleTool": "Rechthoek",
   "Tool_EllipseTool": "Ovaal",
-  "Tool_PencilToolTip": "Potlood (Shift + Ctrl + D)",
-  "Tool_EraserToolTip": "Gom (Shift + Ctrl + E)",
-  "Tool_SelectToolTip": "Selecteren (Shift + Ctrl + W)",
-  "Tool_MoveToolTip": "Verplaatsen (Shift + Ctrl + M)",
-  "Tool_LineToolTip": "Lijnen (Shift + Ctrl + L)",
-  "Tool_BucketToolTip": "Emmer (Shift + Ctrl + B)",
-  "Tool_TextToolTip": "Tekst (Shift + Ctrl + T)",
-  "Tool_RectangleToolTip": "Rechthoek (Shift + Ctrl + R)",
-  "Tool_EllipseToolTip": "Ovaal (Shift + Ctrl + G)",
   "SupportedFiles": "Ondersteunde bestandstypen"
 }
