--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -1,6 +1,5 @@
 {
   "ProgramName": "Kiara's ASCII Art Program",
-  "LanguageName": "English",
   "FileMenu": "File",
   "NewFile": "New",
   "OpenFile": "Open",
@@ -50,8 +49,7 @@
   "LayerManagement_Tooltip_MergeLayerDown": "Merge layer down",
   "LayerManagement_Tooltip_RemoveLayer": "Remove layer",
   "FiltersMenu": "Filters",
-  "NoFilters": "No filters!",
-  "Filters_Main_Affect": "Affect",
+  "Filters_Main_Affect": "Region",
   "Filters_Main_Affect_Tooltip": "The region that this filter will affect.",
   "Filters_Main_Affect_Selection": "Selection",
   "Filters_Main_Affect_Layer": "Layer",
@@ -60,12 +58,14 @@
   "Filters_Main_UnavailableMessage": "Filter is unavailable.",
   "Filters_Mirror": "Mirror",
   "Filters_Mirror_Description": "Mirrors/flips the specified region around the specified axis.",
-  "Filters_Mirror_Axis": "Axis",
+  "Filters_Main_Axis": "Axis",
   "Filters_Mirror_Axis_Tooltip": "The axis to mirror around.",
   "Filters_Outline": "Outline",
   "Filters_Outline_Description": "Creates an outline around the specified region.",
   "Filters_Outline_Character": "Character",
   "Filters_Outline_Character_Tooltip": "Character to use as the outline.",
+  "Filters_Wave": "Wave",
+  "Filters_Main_Strength": "Strength",
   "Filter_Apply": "Apply filter",
   "Create": "Create",
   "Edit": "Edit",
@@ -127,6 +127,8 @@
   "Tool_StayInsideSelection": "Stay inside selection",
   "Tool_EightDirectional": "Eight directional",
   "Tool_Fill": "Fill in",
+  "File_Drop_NoExtensionMessage": "Can not open dropped in file with no extension!\nFile path: {0}",
+  "File_Drop_UnknownExtensionMessage": "Can not open dropped in file with extension {0}!\nFile path: {1}",
   "File_DifferentVersionMessage": "ASCII Art file might not be fully compatible with this build, file version is not equal to the file version this build is made to handle.\nASCII Art file version: {0}\nCurrent build file version: {1}",
   "File_ExportFailedMessage": "Failed to export art file!\nException message: {0}",
   "File_ExportBusy": "Exporting to {0}...",
@@ -182,14 +184,5 @@
   "Tool_TextTool": "Text",
   "Tool_RectangleTool": "Rectangle",
   "Tool_EllipseTool": "Ellipse",
-  "Tool_PencilToolTip": "Pencil Tool (Shift + Ctrl + D)",
-  "Tool_EraserToolTip": "Eraser Tool (Shift + Ctrl + E)",
-  "Tool_SelectToolTip": "Select Tool (Shift + Ctrl + W)",
-  "Tool_MoveToolTip": "Move Tool (Shift + Ctrl + M)",
-  "Tool_LineToolTip": "Line Tool (Shift + Ctrl + L)",
-  "Tool_BucketToolTip": "Bucket Tool (Shift + Ctrl + B)",
-  "Tool_TextToolTip": "Text Tool (Shift + Ctrl + T)",
-  "Tool_RectangleToolTip": "Rectangle Tool (Shift + Ctrl + R)",
-  "Tool_EllipseToolTip": "Ellipse Tool (Shift + Ctrl + G)",
   "SupportedFiles": "Supported file types"
 }
