--- a/Resources/Languages/French.json
+++ b/Resources/Languages/French.json
@@ -1,6 +1,5 @@
 {
   "ProgramName": "Programme artistique ASCII de Kiara",
-  "LanguageName": "Français",
   "FileMenu": "Fichier",
   "NewFile": "Nouveau",
   "OpenFile": "Ouvrir",
@@ -10,7 +9,7 @@
   "ExportFile": "Exporter",
   "EditFile": "Modifier le fichier",
   "CopyClipboardArt": "Copier l'illustration dans le presse-papiers",
-  "CopyClipboardArt_Message": null,
+  "CopyClipboardArt_Message": "L'illustration copié dans le presse-papiers",
   "ImportLayer": "Importer comme une nouvelle calque",
   "Settings": "Préférences",
   "Exit": "Fermer",
@@ -27,7 +26,7 @@
   "CropCanvas": "Recadrer la toile",
   "CropLayer": "Recadrer la calque",
   "FitLayersInCanvas": "Recadrer toutes les calques pour les adapter à la toile",
-  "FitLayersInCanvas_WarningMessage": "Cette action permet de supprimer des calques.\\nÊtes-vous certain?",
+  "FitLayersInCanvas_WarningMessage": "Cette action permet de supprimer des calques\nÊtes-vous certain?",
   "ViewMenu": "Regarder",
   "DarkMode": "Mode sombre",
   "Visible": "Visible",
@@ -43,10 +42,31 @@
   "CanvasResetHighlightThickness": "Réinitialiser l'épaisseur de surbrillance",
   "CanvasGridVisibility": "Afficher la grille",
   "LayerManagement": "Gestion des calques",
-  "FiltersMenu": null,
-  "NoFilters": null,
-  "DrawMenu": null,
-  "FillSelection": null,
+  "LayerManagement_Tooltip_AddLayer": "Ajouter un calque",
+  "LayerManagement_Tooltip_MoveLayerUp": "Déplacer le calque vers le haut",
+  "LayerManagement_Tooltip_MoveLayerDown": "Déplacer le calque vers le bas",
+  "LayerManagement_Tooltip_DuplicateLayer": "Dupliquer le calque",
+  "LayerManagement_Tooltip_MergeLayerDown": "Fusionner le calque vers le bas",
+  "LayerManagement_Tooltip_RemoveLayer": "Supprimer le calque",
+  "FiltersMenu": "Filtres",
+  "Filters_Main_Affect": "Région",
+  "Filters_Main_Affect_Tooltip": "La région affectée par ce filtre.",
+  "Filters_Main_Affect_Selection": "Sélection",
+  "Filters_Main_Affect_Layer": "Calque",
+  "Filters_Main_Affect_Canvas": "La toile",
+  "Filters_Main_SelectionOutsideMessage": "La sélection est en dehors du calque sélectionné.",
+  "Filters_Main_UnavailableMessage": "Le filtre n'est pas disponible.",
+  "Filters_Mirror": "Refléter",
+  "Filters_Mirror_Description": null,
+  "Filters_Main_Axis": null,
+  "Filters_Mirror_Axis_Tooltip": null,
+  "Filters_Outline": null,
+  "Filters_Outline_Description": null,
+  "Filters_Outline_Character": null,
+  "Filters_Outline_Character_Tooltip": null,
+  "Filters_Wave": null,
+  "Filters_Main_Strength": null,
+  "Filter_Apply": null,
   "Create": null,
   "Edit": "Modifier",
   "ASCIIArt": "ASCII Illustration",
@@ -61,13 +81,17 @@
   "ColorPicker": null,
   "HexColor": "Hex",
   "Error_InvalidHexColorMessage": null,
-  "InvalidColorMessage": null,
+  "Error_InvalidColorMessage": null,
   "ImageASCIIArtImportOptions": null,
   "InvertBrightness": null,
   "Scale": null,
+  "ImageArtLayerConverter_Characters": null,
+  "ImageArtLayerConverter_Characters_Info": null,
+  "Error_ImageArtLayerConverter_Characters_Invalid": null,
   "Settings_Language": "Langue",
   "Settings_UserInterface": null,
   "Settings_CanvasFont": null,
+  "Settings_ToolPreviews": null,
   "Settings_Files": null,
   "Settings_AutosaveFiles": null,
   "Settings_AutosaveInterval": null,
@@ -92,12 +116,20 @@
   "Error_Palette_AlreadyExistsMessage": null,
   "Palette_EditPresetPaletteMessage": null,
   "Palette_RemovePresetPaletteMessage": null,
+  "Palette_New": null,
+  "Palette_Edit": null,
+  "Palette_Remove": null,
   "LayerOptions": null,
+  "LayerOptions_Offset": null,
   "Tool_NoLayerSelectedCaption": null,
   "Tool_NoLayerSelectedMessage": null,
   "Tool_Size": null,
   "Tool_StayInsideSelection": null,
   "Tool_EightDirectional": null,
+  "Tool_Fill": null,
+  "File_Drop_NoExtensionMessage": null,
+  "File_Drop_UnknownExtensionMessage": null,
+  "File_DifferentVersionMessage": null,
   "File_ExportFailedMessage": null,
   "File_ExportBusy": null,
   "File_ExportSuccessMessage": null,
@@ -112,8 +144,13 @@
   "File_LargeFileWarningMessage": null,
   "File_TooLargeMessage": null,
   "File_CloseWithoutSavingWarningMessage": null,
+  "Error_Application_StartUpErrorMessage": null,
   "Application_CloseWithoutSavingWarningMessage": null,
+  "Application_AutoCloseMessage": null,
+  "Application_CloseBackgroundTaskErrorMessage": null,
+  "Application_AlreadyRunningMessage": null,
   "BackgroundTaskBusyMessage": null,
+  "Application_Exit_SettingsSaveErrorMessage": null,
   "About": null,
   "Credits": "Crédits",
   "Credits_Translation": "Kiara, le Polyglot Projet, Google Translate",
@@ -133,5 +170,19 @@
   "PresetPalette_Shapes": null,
   "PresetPalette_Braille6": null,
   "PresetPalette_Braille8": null,
-  "SupportedFiles": null
+  "Autosave": null,
+  "Autosave_Busy": null,
+  "Error_Autosave_FileSaving": null,
+  "Error_Autosave_SettingsSaving": null,
+  "Tool_Options": "Options d'outils",
+  "Tool_PencilTool": "Crayon",
+  "Tool_EraserTool": "Gomme",
+  "Tool_SelectTool": "Sélectionner",
+  "Tool_MoveTool": "Se déplacer",
+  "Tool_LineTool": "Ligne",
+  "Tool_BucketTool": "Seau",
+  "Tool_TextTool": "Texte",
+  "Tool_RectangleTool": "Rectangle",
+  "Tool_EllipseTool": "Ellipse",
+  "SupportedFiles": "Types de fichiers pris en charge"
 }
