--- a/Resources/Languages/Spanish.json
+++ b/Resources/Languages/Spanish.json
@@ -1,6 +1,5 @@
 {
   "ProgramName": "Programa de arte ASCII de Kiara",
-  "LanguageName": "Español",
   "FileMenu": "Archivo",
   "NewFile": "Nuevo",
   "OpenFile": "Abrir",
@@ -9,26 +8,26 @@
   "ImportFile": "Importar",
   "ExportFile": "Exportar",
   "EditFile": "Editar archivo",
-  "CopyClipboardArt": null,
-  "CopyClipboardArt_Message": null,
-  "ImportLayer": null,
-  "Settings": null,
-  "Exit": null,
-  "EditMenu": null,
-  "Undo": null,
-  "Redo": null,
-  "CutSelection": null,
-  "CopySelection": null,
-  "PasteLayer": null,
-  "DeleteSelection": null,
-  "SelectCanvas": null,
-  "SelectLayer": null,
-  "CancelSelection": null,
-  "CropCanvas": null,
-  "CropLayer": null,
-  "FitLayersInCanvas": null,
-  "FitLayersInCanvas_WarningMessage": "Esta acción permite eliminar capas.\\n¿Estás seguro?",
-  "ViewMenu": null,
+  "CopyClipboardArt": "Copiar arte al portapapeles",
+  "CopyClipboardArt_Message": "Arte copiado al portapapeles",
+  "ImportLayer": "Importar como nueva capa",
+  "Settings": "Ajustes",
+  "Exit": "Salir",
+  "EditMenu": "Editar",
+  "Undo": "Deshacer",
+  "Redo": "Rehacer",
+  "CutSelection": "Selección de corte",
+  "CopySelection": "Copiar selección",
+  "PasteLayer": "Pegar como nueva capa",
+  "DeleteSelection": "Eliminar selección",
+  "SelectCanvas": "Seleccionar lienzo",
+  "SelectLayer": "Seleccionar capa",
+  "CancelSelection": "Cancelar selección",
+  "CropCanvas": "Recortar lienzo",
+  "CropLayer": "Recortar capa",
+  "FitLayersInCanvas": "Recorta todas las capas para que quepan dentro del lienzo",
+  "FitLayersInCanvas_WarningMessage": "Esta acción permite eliminar capas.\n¿Estás seguro?",
+  "ViewMenu": "Ver",
   "DarkMode": "Modo oscuro",
   "Visible": "Visible",
   "Toolbox": "Caja de herramientas",
@@ -37,16 +36,37 @@
   "CanvasIncreaseTextSize": "Ampliar tamaño del texto",
   "CanvasDecreaseTextSize": "Reducir el tamaño del texto",
   "CanvasResetTextSize": "Restablecer el tamaño del texto",
-  "CanvasHighlightThickness": "Espesor de resaltado: {0}",
-  "CanvasIncreaseHighlightThickness": null,
-  "CanvasDecreaseHighlightThickness": null,
-  "CanvasResetHighlightThickness": null,
-  "CanvasGridVisibility": null,
-  "LayerManagement": null,
-  "FiltersMenu": null,
-  "NoFilters": null,
-  "DrawMenu": null,
-  "FillSelection": null,
+  "CanvasHighlightThickness": "Grosor de resaltado: {0}",
+  "CanvasIncreaseHighlightThickness": "Aumentar el grosor de resaltado",
+  "CanvasDecreaseHighlightThickness": "Disminuir el grosor de resaltado",
+  "CanvasResetHighlightThickness": "Restablecer el grosor de resaltado",
+  "CanvasGridVisibility": "Mostrar cuadrícula",
+  "LayerManagement": "Gestión de capas",
+  "LayerManagement_Tooltip_AddLayer": "Agregar capa",
+  "LayerManagement_Tooltip_MoveLayerUp": "Mover capa hacia arriba",
+  "LayerManagement_Tooltip_MoveLayerDown": "Mover capa hacia abajo",
+  "LayerManagement_Tooltip_DuplicateLayer": "Duplicar capa",
+  "LayerManagement_Tooltip_MergeLayerDown": "Fusionar capa hacia abajo",
+  "LayerManagement_Tooltip_RemoveLayer": "Quitar capa",
+  "FiltersMenu": "Filtros",
+  "Filters_Main_Affect": "Región",
+  "Filters_Main_Affect_Tooltip": "La región a la que afectará este filtro.",
+  "Filters_Main_Affect_Selection": "Selección",
+  "Filters_Main_Affect_Layer": "Capa",
+  "Filters_Main_Affect_Canvas": "Lienzo de arte",
+  "Filters_Main_SelectionOutsideMessage": "La selección está fuera de la capa seleccionada.",
+  "Filters_Main_UnavailableMessage": "El filtro no está disponible.",
+  "Filters_Mirror": "Reflejar",
+  "Filters_Mirror_Description": null,
+  "Filters_Main_Axis": null,
+  "Filters_Mirror_Axis_Tooltip": null,
+  "Filters_Outline": null,
+  "Filters_Outline_Description": null,
+  "Filters_Outline_Character": null,
+  "Filters_Outline_Character_Tooltip": null,
+  "Filters_Wave": null,
+  "Filters_Main_Strength": null,
+  "Filter_Apply": null,
   "Create": null,
   "Edit": null,
   "ASCIIArt": null,
@@ -59,15 +79,19 @@
   "TextColor": null,
   "Error_InvalidImageExportTextSizeMessage": null,
   "ColorPicker": null,
-  "HexColor": null,
+  "HexColor": "Hex",
   "Error_InvalidHexColorMessage": null,
   "Error_InvalidColorMessage": null,
   "ImageASCIIArtImportOptions": null,
   "InvertBrightness": null,
   "Scale": null,
+  "ImageArtLayerConverter_Characters": null,
+  "ImageArtLayerConverter_Characters_Info": null,
+  "Error_ImageArtLayerConverter_Characters_Invalid": null,
   "Settings_Language": "Idioma",
   "Settings_UserInterface": null,
   "Settings_CanvasFont": null,
+  "Settings_ToolPreviews": null,
   "Settings_Files": null,
   "Settings_AutosaveFiles": null,
   "Settings_AutosaveInterval": null,
@@ -96,11 +120,16 @@
   "Palette_Edit": null,
   "Palette_Remove": null,
   "LayerOptions": null,
+  "LayerOptions_Offset": null,
   "Tool_NoLayerSelectedCaption": null,
   "Tool_NoLayerSelectedMessage": null,
   "Tool_Size": null,
   "Tool_StayInsideSelection": null,
   "Tool_EightDirectional": null,
+  "Tool_Fill": null,
+  "File_Drop_NoExtensionMessage": null,
+  "File_Drop_UnknownExtensionMessage": null,
+  "File_DifferentVersionMessage": null,
   "File_ExportFailedMessage": null,
   "File_ExportBusy": null,
   "File_ExportSuccessMessage": null,
@@ -121,6 +150,7 @@
   "Application_CloseBackgroundTaskErrorMessage": null,
   "Application_AlreadyRunningMessage": null,
   "BackgroundTaskBusyMessage": null,
+  "Application_Exit_SettingsSaveErrorMessage": null,
   "About": null,
   "Credits": "Créditos",
   "Credits_Translation": "Kiara, el proyecto Polyglot, Google Translate",
@@ -141,14 +171,18 @@
   "PresetPalette_Braille6": null,
   "PresetPalette_Braille8": null,
   "Autosave": null,
+  "Autosave_Busy": null,
   "Error_Autosave_FileSaving": null,
   "Error_Autosave_SettingsSaving": null,
-  "Tool_PencilToolTip": null,
-  "Tool_EraserToolTip": null,
-  "Tool_SelectToolTip": null,
-  "Tool_MoveToolTip": null,
-  "Tool_LineToolTip": null,
-  "Tool_BucketToolTip": null,
-  "Tool_TextToolTip": null,
+  "Tool_Options": null,
+  "Tool_PencilTool": null,
+  "Tool_EraserTool": null,
+  "Tool_SelectTool": null,
+  "Tool_MoveTool": null,
+  "Tool_LineTool": null,
+  "Tool_BucketTool": null,
+  "Tool_TextTool": null,
+  "Tool_RectangleTool": null,
+  "Tool_EllipseTool": null,
   "SupportedFiles": null
 }
